--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -9,7 +9,7 @@ timeout.element.wait=20000
 # Web DriverContainer configuration parameters
 browser=chrome
 
-remote.wd=tru
+remote.wd=false
 browser.remote_wd.url=http://localhost:4444/wd/hub
 browser.driver_options.file=/src/test/resources/driverOptions.json
 
